# ini-file

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ini_file.cbp  test.ini
src/: Ini.cpp  Ini.h  inifile.cpp  inifile.h  main.cpp
